Renamed package to hyphen convention.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DiscordSpoilerBot",
+  "name": "discord-spoiler-bot",
   "version": "1.0.1",
   "description": "",
   "main": "bot.js",
