--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "discord.js": "^13.5.0",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.15"
-  }
+  },
+  "engines": { 
+    "node": ">=14.0.0", 
+    "npm": ">=7.0.0" 
+    }
 }
