--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "discord.js": "^13.5.0",
     "dotenv": "^10.0.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "forever":"^4.0.1"
   },
   "engines": { 
     "node": ">=14.0.0", 
