--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "dependencies": {
     "discord.js": "^13.5.0",
     "dotenv": "^10.0.0",
+    "express": "^4.17.2",
     "nodemon": "^2.0.15",
-    "pm2":"^5.1.2"
+    "pm2": "^5.1.2"
   },
-  "engines": { 
-    "node": ">=14.0.0", 
-    "npm": ">=7.0.0" 
-    }
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=7.0.0"
+  }
 }
