--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js",
+    "start": "pm2-runtime start bot.js -- --port 8080",
     "devStart": "nodemon bot.js"
   },
   "keywords": [],
